// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AxisTickMarkComponent should not render line when tickMark.line is falsy 1`] = `
<div
  id="root0"
  ngx-rxtimeline-tick-mark=""
>
  <g
    transform="translate(10,10)"
  >
    <text
      class="tick-mark-text"
      dx="0"
      dy="1"
      font-family="arial"
      font-size="10"
    >
       tickMark label 
    </text>
    
  </g>
</div>
`;

exports[`AxisTickMarkComponent should render line when tickMark.line is truthy 1`] = `
<div
  id="root1"
  ngx-rxtimeline-tick-mark=""
>
  <g
    transform="translate(10,10)"
  >
    <text
      class="tick-mark-text"
      dx="0"
      dy="2"
      font-family="arial"
      font-size="10"
    >
       tickMark label 
    </text>
    
    <g
      class="tick-mark-line"
      ngx-rxtimeline-line=""
    >
      <g />
    </g>
  </g>
</div>
`;
